# invest-pilot

./: .gitignore  LICENSE  README.md  TROUBLESHOOTING.md  alpaca_mcp_server.py  mcp_dev_adapter.py  pyproject.toml
docs/: ADVANCED_ORDERS_IMPLEMENTATION_PLAN.md  alpaca-mcp-comparison.md  architecture-refactor-plan.md  fastmcp-v2-migration-complete.md  fastmcp-v2-migration-plan.md  function-comparison-table.md
src/: main.py
src/brokers/alpaca/: client.py
src/brokers/alpaca/tools/: account.py  market_data.py  orders.py
src/config/: settings.py
src/core/: exceptions.py  logging_config.py  utils.py
